<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lacuna Expanse</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="title_activity_planet_view">PlanetView</string>
    <string name="resInfoTitle">Resource Info</string>
    <string name="blank"></string>
    <string name="logout">Logout</string>
    <string name="selectDifPlanet">Change Planet</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_planet_buildings_view">PlanetBuildingsView</string>
    <string name="empireName">Empire Name</string>
    <string name="passWord">Empire Password</string>
    <string name="goBack">Go Back</string>
    <string name="title_activity_splash">Splash</string>
    <string name="empire">Empire</string>
    <string name="mail">Mail</string>
    <string name="title_activity_mail">Mail</string>
    <string name="title_activity_view_mail">ViewMail</string>
    <string name="title_activity_buildings_wrapper">BuildingsWrapper</string>

</resources>