<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:theme="@style/AppTheme" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="50dp"
        tools:context=".Login" />

    <EditText
        android:id="@+id/empireNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/empireName" />

    <EditText
        android:id="@+id/passWordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/passWord" />

    <Spinner
        android:id="@+id/selectServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/serverOptions" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/login" />
    
    <TextView
        android:id="@+id/versionInformation"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center" />
       
</LinearLayout>